<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.08" />

    <TextView
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:id="@+id/textView"
        android:layout_weight="0.03" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSex"
        android:hint="(输入性别)"
        android:textSize="25sp"
        android:layout_weight="0.05"
        android:text="@string/edt_sex_hint" />

    <TextView
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:id="@+id/textView2"
        android:layout_weight="0.03" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtAge"
        android:layout_weight="0.08"
        android:hint="(输入年龄)"
        android:textSize="25sp"
        android:text="@string/edt_age_hint" />

    <Button
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/btnOK"
        android:id="@+id/btnOK"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:id="@+id/txtR"
        android:layout_weight="0.08"
        android:textSize="25sp" />
</LinearLayout>
